// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scss > compileString 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

.dark::view-transition-old(root) {
  z-index: 2147483646;
}

.dark::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  z-index: 2147483646;
}

[data-theme-transition=to-dark]:not([data-theme-transition-preset])::view-transition-new(root),
[data-theme-transition=to-dark][data-theme-transition-preset=circle]::view-transition-new(root) {
  clip-path: circle(0 at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  z-index: 2147483646;
}

[data-theme-transition=from-dark]:not([data-theme-transition-preset])::view-transition-old(root),
[data-theme-transition=from-dark][data-theme-transition-preset=circle]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=fade]::view-transition-new(root) {
  opacity: 0;
}

[data-theme-transition=from-dark][data-theme-transition-preset=fade]::view-transition-old(root) {
  opacity: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=wipe]::view-transition-new(root) {
  clip-path: inset(0 0 0 100%);
}

[data-theme-transition=from-dark][data-theme-transition-preset=wipe]::view-transition-old(root) {
  clip-path: inset(0 0 0 0);
}

[data-theme-transition=to-dark][data-theme-transition-preset=slide]::view-transition-new(root) {
  opacity: 0;
  transform: translate3d(16px, 0, 0);
}

[data-theme-transition=from-dark][data-theme-transition-preset=slide]::view-transition-old(root) {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}"
`;

exports[`scss > compileString case 0 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

[data-theme=dark]::view-transition-old(root) {
  z-index: 2147483646;
}

[data-theme=dark]::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  z-index: 2147483646;
}

[data-theme-transition=to-dark]:not([data-theme-transition-preset])::view-transition-new(root),
[data-theme-transition=to-dark][data-theme-transition-preset=circle]::view-transition-new(root) {
  clip-path: circle(0 at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  z-index: 2147483646;
}

[data-theme-transition=from-dark]:not([data-theme-transition-preset])::view-transition-old(root),
[data-theme-transition=from-dark][data-theme-transition-preset=circle]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=fade]::view-transition-new(root) {
  opacity: 0;
}

[data-theme-transition=from-dark][data-theme-transition-preset=fade]::view-transition-old(root) {
  opacity: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=wipe]::view-transition-new(root) {
  clip-path: inset(0 0 0 100%);
}

[data-theme-transition=from-dark][data-theme-transition-preset=wipe]::view-transition-old(root) {
  clip-path: inset(0 0 0 0);
}

[data-theme-transition=to-dark][data-theme-transition-preset=slide]::view-transition-new(root) {
  opacity: 0;
  transform: translate3d(16px, 0, 0);
}

[data-theme-transition=from-dark][data-theme-transition-preset=slide]::view-transition-old(root) {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}"
`;

exports[`scss > compileString case 1 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 2;
}

::view-transition-new(root) {
  z-index: 3;
}

[data-theme=dark]::view-transition-old(root) {
  z-index: 3;
}

[data-theme=dark]::view-transition-new(root) {
  z-index: 2;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 2;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  z-index: 3;
}

[data-theme-transition=to-dark]:not([data-theme-transition-preset])::view-transition-new(root),
[data-theme-transition=to-dark][data-theme-transition-preset=circle]::view-transition-new(root) {
  clip-path: circle(0 at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  z-index: 3;
}

[data-theme-transition=from-dark]:not([data-theme-transition-preset])::view-transition-old(root),
[data-theme-transition=from-dark][data-theme-transition-preset=circle]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 2;
}

[data-theme-transition=to-dark][data-theme-transition-preset=fade]::view-transition-new(root) {
  opacity: 0;
}

[data-theme-transition=from-dark][data-theme-transition-preset=fade]::view-transition-old(root) {
  opacity: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=wipe]::view-transition-new(root) {
  clip-path: inset(0 0 0 100%);
}

[data-theme-transition=from-dark][data-theme-transition-preset=wipe]::view-transition-old(root) {
  clip-path: inset(0 0 0 0);
}

[data-theme-transition=to-dark][data-theme-transition-preset=slide]::view-transition-new(root) {
  opacity: 0;
  transform: translate3d(16px, 0, 0);
}

[data-theme-transition=from-dark][data-theme-transition-preset=slide]::view-transition-old(root) {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}"
`;

exports[`scss > index 1`] = `
"::view-transition-old(root),
::view-transition-new(root) {
  mix-blend-mode: normal;
  animation: none;
}

::view-transition-old(root) {
  z-index: 1;
}

::view-transition-new(root) {
  z-index: 2147483646;
}

.dark::view-transition-old(root) {
  z-index: 2147483646;
}

.dark::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-old(root) {
  z-index: 1;
}

[data-theme-transition=to-dark]::view-transition-new(root) {
  z-index: 2147483646;
}

[data-theme-transition=to-dark]:not([data-theme-transition-preset])::view-transition-new(root),
[data-theme-transition=to-dark][data-theme-transition-preset=circle]::view-transition-new(root) {
  clip-path: circle(0 at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-old(root) {
  z-index: 2147483646;
}

[data-theme-transition=from-dark]:not([data-theme-transition-preset])::view-transition-old(root),
[data-theme-transition=from-dark][data-theme-transition-preset=circle]::view-transition-old(root) {
  clip-path: circle(var(--theme-transition-radius) at var(--theme-transition-x) var(--theme-transition-y));
}

[data-theme-transition=from-dark]::view-transition-new(root) {
  z-index: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=fade]::view-transition-new(root) {
  opacity: 0;
}

[data-theme-transition=from-dark][data-theme-transition-preset=fade]::view-transition-old(root) {
  opacity: 1;
}

[data-theme-transition=to-dark][data-theme-transition-preset=wipe]::view-transition-new(root) {
  clip-path: inset(0 0 0 100%);
}

[data-theme-transition=from-dark][data-theme-transition-preset=wipe]::view-transition-old(root) {
  clip-path: inset(0 0 0 0);
}

[data-theme-transition=to-dark][data-theme-transition-preset=slide]::view-transition-new(root) {
  opacity: 0;
  transform: translate3d(16px, 0, 0);
}

[data-theme-transition=from-dark][data-theme-transition-preset=slide]::view-transition-old(root) {
  opacity: 1;
  transform: translate3d(0, 0, 0);
}"
`;
